--- a/index.html
+++ b/index.html
@@ -19,10 +19,12 @@
         <li><a href=""> Contacts</a></li>
       </ul>
     </nav>
-    <ul>
-      <li><a href="tel:+11(000)111-11-11">+11 (000) 111-11-11</a></li>
+    <address>
+      <ul>
       <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+      <li><a href="tel:+11(000)111-11-11">+11 (000) 111-11-11</a></li>
     </ul>
+    </address>
   </header>
   <main>
     <!-- Hero image  -->
